--- a/src/view/MainWindow.fxml
+++ b/src/view/MainWindow.fxml
@@ -1,8 +1,14 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="view.WindowController"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="582.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindowController">
+   <children>
+      <BorderPane fx:id="joystickPane" layoutX="629.0" layoutY="22.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="button" layoutX="14.0" layoutY="351.0" mnemonicParsing="false" onAction="#pressButton" text="test" />
+      <BorderPane fx:id="clocksPanelPane" layoutX="629.0" layoutY="271.0" prefHeight="74.0" prefWidth="92.0" />
+      <BorderPane fx:id="attributesViewPane" layoutX="24.0" layoutY="37.0" prefHeight="200.0" prefWidth="200.0" />
+      <BorderPane fx:id="playbackControlsPane" layoutX="14.0" layoutY="391.0" prefHeight="165.0" prefWidth="682.0" />
+   </children>
+</AnchorPane>
