--- a/src/view/ClocksPanel.fxml
+++ b/src/view/ClocksPanel.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.*?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="185.0" prefWidth="211.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="185.0" prefWidth="211.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ClocksPanelController">
    <children>
       <TextArea layoutX="10.0" layoutY="14.0" prefHeight="158.0" prefWidth="192.0" text="לוח השעונים">
          <font>
