--- a/src/view/JoystickWindow.fxml
+++ b/src/view/JoystickWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<Pane prefHeight="241.0" prefWidth="263.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="241.0" prefWidth="263.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="view.JoystickWindowController">
 <children>
     <Circle fx:id="joystickBorderCircle" layoutX="133.0" layoutY="105.0" radius="65.0" stroke="BLACK" strokeType="INSIDE">
         <fill>
