--- a/src/view/MainWindow.fxml
+++ b/src/view/MainWindow.fxml
@@ -6,9 +6,18 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="582.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindowController">
    <children>
       <BorderPane fx:id="joystickPane" layoutX="629.0" layoutY="22.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="button" layoutX="14.0" layoutY="351.0" mnemonicParsing="false" onAction="#pressButton" text="test" />
       <BorderPane fx:id="clocksPanelPane" layoutX="629.0" layoutY="271.0" prefHeight="74.0" prefWidth="92.0" />
       <BorderPane fx:id="attributesViewPane" layoutX="24.0" layoutY="37.0" prefHeight="200.0" prefWidth="200.0" />
-      <BorderPane fx:id="playbackControlsPane" layoutX="14.0" layoutY="391.0" prefHeight="165.0" prefWidth="682.0" />
+      <BorderPane fx:id="anomalyDetectionGraphPane" layoutX="397.0" layoutY="9.0" prefHeight="165.0" prefWidth="232.0" />
+      <Button fx:id="play" layoutX="133.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonPlay" prefHeight="14.0" prefWidth="16.0" />
+      <Button fx:id="pause" layoutX="196.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonPause" />
+      <Button fx:id="rewind" layoutX="53.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonRewind" />
+      <Button fx:id="forward" layoutX="277.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonForward" />
+      <Label layoutX="204.0" layoutY="446.0" prefHeight="17.0" prefWidth="60.0" text="Play speed" />
+      <TextField layoutX="302.0" layoutY="442.0" prefHeight="25.0" prefWidth="45.0" text="1.0" />
+      <Slider layoutX="9.0" layoutY="474.0" prefHeight="14.0" prefWidth="552.0" />
+      <Button fx:id="openCSV" layoutX="27.0" layoutY="430.0" mnemonicParsing="false" onAction="#pressButtonOpenCSV" text="Open" />
+
+
    </children>
 </AnchorPane>
