--- a/src/view/MainWindow.fxml
+++ b/src/view/MainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -10,13 +11,19 @@
       <BorderPane fx:id="attributesViewPane" layoutX="24.0" layoutY="37.0" prefHeight="200.0" prefWidth="200.0" />
       <BorderPane fx:id="anomalyDetectionGraphPane" layoutX="397.0" layoutY="9.0" prefHeight="165.0" prefWidth="232.0" />
       <Button fx:id="play" layoutX="133.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonPlay" prefHeight="14.0" prefWidth="16.0" />
-      <Button fx:id="pause" layoutX="196.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonPause" prefHeight="25.0" prefWidth="31.0" />
+      <Button fx:id="pause" layoutX="189.0" layoutY="516.0" mnemonicParsing="false" onAction="#pressButtonPause" prefHeight="25.0" prefWidth="31.0" />
       <Button fx:id="rewind" layoutX="53.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonRewind" />
-      <Button fx:id="forward" layoutX="277.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonForward" />
+      <Button fx:id="forward" layoutX="316.0" layoutY="516.0" mnemonicParsing="false" onAction="#pressButtonForward" />
       <Label layoutX="204.0" layoutY="446.0" prefHeight="17.0" prefWidth="60.0" text="Play speed" />
-      <Slider fx:id="progressBar" layoutX="9.0" layoutY="474.0" max="1.0" onDragDone="#progressBarWasDragged" prefHeight="14.0" prefWidth="552.0" />
-      <Button fx:id="openCSV" layoutX="27.0" layoutY="430.0" mnemonicParsing="false" onAction="#pressButtonLoadCSV" text="Open CSV" />
+      <Slider fx:id="progressBar" layoutX="9.0" layoutY="474.0" max="1.0" prefHeight="14.0" prefWidth="552.0" />
+      <Button fx:id="loadCSV" layoutX="27.0" layoutY="430.0" mnemonicParsing="false" onAction="#pressButtonLoadCSV" text="Open CSV" />
       <TextField fx:id="playSpeedTF" layoutX="293.0" layoutY="443.0" onAction="#playSpeedWasChanged" prefHeight="25.0" prefWidth="31.0" text="1.0" />
+      <Button fx:id="stop" layoutX="256.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonStop" />
+      <SubScene height="200.0" width="200.0">
+        <root>
+          <Region />
+        </root>
+      </SubScene>
 
 
    </children>
