--- a/src/view/MainWindow.fxml
+++ b/src/view/MainWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="582.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindowController">
    <children>
@@ -13,12 +14,18 @@
       <Button fx:id="pause" layoutX="189.0" layoutY="516.0" mnemonicParsing="false" onAction="#pressButtonPause" prefHeight="25.0" prefWidth="31.0" />
       <Button fx:id="rewind" layoutX="53.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonRewind" />
       <Button fx:id="forward" layoutX="316.0" layoutY="516.0" mnemonicParsing="false" onAction="#pressButtonForward" />
-      <Label layoutX="204.0" layoutY="446.0" prefHeight="17.0" prefWidth="60.0" text="Play speed" />
+      <Label layoutX="162.0" layoutY="420.0" prefHeight="50.0" prefWidth="162.0" text="Play speed">
+         <font>
+            <Font size="25.0" />
+         </font></Label>
       <Slider fx:id="progressBar" layoutX="9.0" layoutY="474.0" max="1.0" prefHeight="14.0" prefWidth="552.0" />
       <Button fx:id="loadCSV" layoutX="27.0" layoutY="430.0" mnemonicParsing="false" onAction="#pressButtonLoadCSV" text="Open CSV" />
-      <TextField fx:id="playSpeedTF" layoutX="293.0" layoutY="443.0" onAction="#playSpeedWasChanged" prefHeight="25.0" prefWidth="31.0" text="1.0" />
+      <TextField fx:id="playSpeedTF" layoutX="317.0" layoutY="433.0" onAction="#playSpeedWasChanged" prefHeight="25.0" prefWidth="31.0" text="1.0" />
       <Button fx:id="stop" layoutX="256.0" layoutY="521.0" mnemonicParsing="false" onAction="#pressButtonStop" />
-      <Label fx:id="time" layoutX="410.0" layoutY="446.0" prefHeight="17.0" prefWidth="49.0" />
+      <Label fx:id="currentTime" layoutX="480.0" layoutY="420.0" text="0:0">
+         <font>
+            <Font size="34.0" />
+         </font></Label>
 
 
    </children>
