--- a/src/view/Joystick/JoystickWindow.fxml
+++ b/src/view/Joystick/JoystickWindow.fxml
@@ -37,8 +37,8 @@
             <Font name="System Bold" size="18.0" />
         </font>
     </Label>
-    <Slider fx:id="rudderS" blockIncrement="0.1" disable="true" layoutX="58.0" layoutY="186.0" max="1.0" min="-1.0" prefWidth="150.0" />
-    <Slider fx:id="throttleS" blockIncrement="0.05" disable="true" layoutX="44.0" layoutY="29.0" max="1.0" orientation="VERTICAL" prefHeight="150.0" value="0.5" />
+    <Slider fx:id="rudder" blockIncrement="0.1" disable="true" layoutX="58.0" layoutY="186.0" max="1.0" min="-1.0" prefWidth="150.0" />
+    <Slider fx:id="throttle" blockIncrement="0.05" disable="true" layoutX="44.0" layoutY="29.0" max="1.0" orientation="VERTICAL" prefHeight="150.0" value="0.5" />
     <Label layoutX="-5.0" layoutY="89.0" rotate="-90.0" text="throttle">
         <font>
             <Font name="System Bold" size="18.0" />
