fix the permissions+add a lable for the most corollated..

--- a/src/view/AnomalyDetectionGraph/AnomalyDetectionGraph.fxml
+++ b/src/view/AnomalyDetectionGraph/AnomalyDetectionGraph.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="515.0" xmlns="http://javafx.com/javafx/8.0.281" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AnomalyDetectionGraph.AnomalyDetectionGraphController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="566.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AnomalyDetectionGraph.AnomalyDetectionGraphController">
    <children>
-      <LineChart fx:id="selectedAttributeGraph" animated="false" createSymbols="false" layoutY="14.0" prefHeight="221.0" prefWidth="254.0">
+      <LineChart fx:id="selectedAttributeGraph" animated="false" createSymbols="false" layoutY="29.0" prefHeight="221.0" prefWidth="254.0">
           <xAxis>
               <NumberAxis side="BOTTOM" />
           </xAxis>
@@ -13,7 +15,7 @@
               <NumberAxis side="LEFT" />
           </yAxis>
       </LineChart>
-       <LineChart fx:id="theMostCorrelativeAttributeGraph" animated="false" createSymbols="false" layoutX="254.0" layoutY="14.0" prefHeight="221.0" prefWidth="254.0">
+       <LineChart fx:id="theMostCorrelativeAttributeGraph" animated="false" createSymbols="false" layoutX="251.0" layoutY="29.0" prefHeight="221.0" prefWidth="254.0">
            <xAxis>
                <NumberAxis side="BOTTOM" />
            </xAxis>
@@ -29,5 +31,10 @@
                <NumberAxis side="LEFT" />
            </yAxis>
        </LineChart>
+      <Label fx:id="theMostCorrelativeAttribute" layoutX="281.0" prefHeight="35.0" prefWidth="280.0">
+       <font>
+           <Font size="20.0" />
+       </font>
+      </Label>
    </children>
 </Pane>
