--- a/src/view/MainWindow.fxml
+++ b/src/view/MainWindow.fxml
@@ -5,59 +5,19 @@
 <?import javafx.scene.text.*?>
 <?import view.Joystick.* ?>
 <?import view.ClocksPanel.* ?>
-<?import view.AnomalyDetectionGraph.* ?>
+<?import view.Graphs.* ?>
 <?import view.AttributesView.* ?>
+<?import view.Controllers.* ?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
             prefWidth="1350.0" xmlns="http://javafx.com/javafx/8.0.281" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="view.MainWindowController">
    <MyAttributes fx:id="attributes" layoutX="5.0" layoutY="50.0" prefHeight="200.0" prefWidth="200.0"/>
    <MyJoystick fx:id="joystick" layoutX="1100.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0"/>
+   <MyControllers fx:id="controllers" layoutX="100.0" layoutY="520.0" prefHeight="200.0" prefWidth="200.0"/>
    <MyClocksPanel fx:id="clocksPanel" layoutX="850.0" layoutY="300.0" prefHeight="74.0" prefWidth="92.0"/>
-   <MyAnomalyDetectionGraph fx:id="graphs" layoutX="230.0"  prefHeight="440" prefWidth="612" minHeight="440" maxHeight="440" minWidth="612" maxWidth="612"/>
-   <Button layoutX="162.0" layoutY="564.0" mnemonicParsing="false" onAction="#pressButtonPlay" prefHeight="74.0"
-           prefWidth="70.0" style="-fx-background-color: none;" text="▶">
-      <font>
-         <Font size="55.0"/>
-      </font>
-   </Button>
-   <Button layoutX="242.0" layoutY="572.0" mnemonicParsing="false" onAction="#pressButtonPause" prefHeight="102.0"
-           prefWidth="102.0" style="-fx-background-color: none;" text="⏸">
-      <font>
-         <Font size="40.0"/>
-      </font>
-   </Button>
-   <Button layoutX="82.0" layoutY="580.0" mnemonicParsing="false" onAction="#pressButtonRewind" prefHeight="83.0"
-           prefWidth="85.0" style="-fx-background-color: none;" text="⏪">
-      <font>
-         <Font size="40.0"/>
-      </font>
-   </Button>
-   <Button layoutX="409.0" layoutY="580.0" mnemonicParsing="false" onAction="#pressButtonForward" prefHeight="86.0"
-           prefWidth="85.0" style="-fx-background-color: none;" text="⏩">
-      <font>
-         <Font size="40.0"/>
-      </font>
-   </Button>
-   <Button layoutX="317.0" layoutY="580.0" mnemonicParsing="false" onAction="#pressButtonStop" prefHeight="86.0"
-           prefWidth="92.0" style="-fx-background-color: none;" text="⏹">
-      <font>
-         <Font size="40.0"/>
-      </font>
-   </Button>
-   <Label layoutX="162.0" layoutY="500.0" prefHeight="50.0" prefWidth="162.0" text="Play speed">
-      <font>
-         <Font size="25.0"/>
-      </font>
-   </Label>
-   <Slider fx:id="progressBar" layoutX="9.0" layoutY="554.0" max="1.0" prefHeight="14.0" prefWidth="552.0"/>
-   <TextField fx:id="playSpeedTF" layoutX="317.0" layoutY="513.0" onAction="#playSpeedWasChanged" prefHeight="25.0"
-              prefWidth="31.0" text="1.0"/>
-   <Label fx:id="currentTime" layoutX="480.0" layoutY="500.0" text="0:0">
-      <font>
-         <Font size="34.0"/>
-      </font>
-   </Label>
+   <MyGraphs fx:id="graphs" layoutX="230.0" prefHeight="440" prefWidth="612" minHeight="440" maxHeight="440" minWidth="612" maxWidth="612"/>
+
    <MenuButton mnemonicParsing="false" text="Load files">
       <items>
          <MenuItem mnemonicParsing="false" onAction="#pressButtonLoadProperties" style="-fx-font-size: 20.0 pt;"
@@ -71,6 +31,4 @@
          <Font size="20.0"/>
       </font>
    </MenuButton>
-
-
 </AnchorPane>
