--- a/src/anomalyDetectors/styleAnomalyGraphs.css
+++ b/src/anomalyDetectors/styleAnomalyGraphs.css
@@ -2,7 +2,7 @@
 .default-color1.chart-series-line { -fx-stroke: black; }
 
 .default-color0.chart-line-symbol {
-    -fx-background-color: white, green;
+    -fx-background-color: transparent, green;
 }
 .default-color1.chart-line-symbol {
     -fx-background-color: transparent, transparent;
